<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThreadedDownloads</string>
    <string name="action_settings">Settings</string>
    <string name="enter_url">Enter URL:</string>
    <string name="default_url">http://goo.gl/sCDJa3</string>
    <string name="run_runnable">Run Runnable</string>
    <string name="run_messages">Run Messages</string>
    <string name="run_async">Run Async</string>
    <string name="reset_image">Reset Image</string>
	<string name="desc">Image description</string>
</resources>