<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThreadedDownloadActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_url" />

        <EditText
            android:id="@+id/editURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri|textMultiLine"
            android:text="@string/default_url" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="runRunnable"
            android:text="@string/run_runnable" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="runMessages"
            android:text="@string/run_messages" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="runAsyncTask"
            android:text="@string/run_async" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="resetImage"
            android:text="@string/reset_image" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/desc"
        android:scaleType="fitCenter"
        android:src="@drawable/einstein" />

</LinearLayout>